--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,5 @@ channels==2.1.5
 channels-redis==2.3.1
 uvicorn==0.3.21
 django-currentuser==0.2.3
+django-ipware==2.1.0
+django-timedeltatemplatefilter==0.1.2
