--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ django-currentuser==0.2.3
 django-ipware==2.1.0
 django-timedeltatemplatefilter==0.1.2
 django-smtp-ssl==1.0
+python-memcached==1.59
